--- a/app/application/index/view/wallet/index.html
+++ b/app/application/index/view/wallet/index.html
@@ -40,7 +40,7 @@
 		<div class="mui-content">
 			<div class="top">
 				<p><{:lang('balance')}></p>
-				<p id="balance">$<{:number_format($userinfo.golds,2)}></p>
+				<p id="balance"><{:number_format($userinfo.golds,2)}></p>
 				<button type="button" class="mui-btn mui-btn-yellow mui-btn-block" style="width:50%;margin:0 auto;"><{:lang('upgrade')}></button>
 			</div>
 			
