--- a/app/application/index/view/recharge/index.html
+++ b/app/application/index/view/recharge/index.html
@@ -77,9 +77,9 @@
                     <div class="mui-col-sm-6 mui-col-xs-6">
                         <img src="<{:config('skin_path')}>/images/vml.png" alt="lianyin" class="pay_type active">
                     </div>
-                    <div class="mui-col-sm-6 mui-col-xs-6">
-                        <img src="<{:config('skin_path')}>/images/fuHui.png" alt="yingfu" class="pay_type">
-                    </div>
+                    <!--<div class="mui-col-sm-6 mui-col-xs-6">-->
+                    <!--    <img src="<{:config('skin_path')}>/images/fuHui.png" alt="yingfu" class="pay_type">-->
+                    <!--</div>-->
                 </div>
             </div>
         </div>
