--- a/app/application/index/view/mall/detail.html
+++ b/app/application/index/view/mall/detail.html
@@ -32,18 +32,18 @@
 		<div class="white">
 			<ul class="xq-sm">
 				<li><span><{:lang("gift name")}>：</span><p><{$info.giftname}></p></li>
-				<li><span><{:lang("gift price")}>：</span><p>$<{$info.money}></p></li>
+				<!--<li><span><{:lang("gift price")}>：</span><p>$<{$info.money}></p></li>-->
 				<li><span><{:lang("member price")}>：</span><p class="yh-price">$<{$info.money}></p></li>
-				<li><span><{:lang("yunfei")}>：</span><p><{:lang("free")}></p></li>
+				<!--<li><span><{:lang("yunfei")}>：</span><p><{:lang("free")}></p></li>-->
 			</ul>
 		</div>
 		<a href="<{:url('mall/pay',array('id'=>$info['id']))}>" class="buy-btn"><{:lang("buy")}></a>
-		<div class="white">
-			<div class="xq-cont">
-				<h5 class="xq-cont-title"><{:lang("gift detail")}></h5>
-				<{$info.desc}>
-			</div>
-		</div>
+		<!--<div class="white">-->
+		<!--	<div class="xq-cont">-->
+		<!--		<h5 class="xq-cont-title"><{:lang("gift detail")}></h5>-->
+		<!--		<{$info.desc}>-->
+		<!--	</div>-->
+		<!--</div>-->
 		
     
 	</div>
