修复个人后台和礼物名称数量显示

--- a/app/application/index/view/giftbox/index.html
+++ b/app/application/index/view/giftbox/index.html
@@ -44,8 +44,8 @@
 								</div>
 								<!--页脚，放置补充信息或支持的操作-->
 								<div class="mui-card-footer">
-									<p>赠言：<{$vo.msg}></p>
-									
+									<p><{$vo.gift_name}></p>
+									<p>X<{$vo.gift_num}></p>
 								</div>
 							</div>
 		            	</div>
@@ -72,7 +72,8 @@
 								</div>
 								<!--页脚，放置补充信息或支持的操作-->
 								<div class="mui-card-footer">
-									<p>赠言：<{$vo.msg}></p>
+									<p><{$vo.gift_name}></p>
+									<p>X<{$vo.gift_num}></p>
 								</div>
 							</div>
 		            	</div>
